Fix NDelius branding

--- a/app/views/arrange-a-session/notes.html
+++ b/app/views/arrange-a-session/notes.html
@@ -19,6 +19,6 @@
   </div>
 
   <p class="govuk-hint">
-    This will be added to the nDelius contact log.
+    This will be added to the NDelius contact log.
   </p>
 {% endblock %}
