--- a/app/views/confirm-attendance/notes.html
+++ b/app/views/confirm-attendance/notes.html
@@ -74,6 +74,6 @@
   } | decorateFormAttributes(['communication', CRN, sessionId, 'filenames'])) }}
 
   <p class="govuk-hint">
-    This will be added to the nDelius contact log.
+    This will be added to the NDelius contact log.
   </p>
 {% endblock %}
