--- a/app/views/case/_communication-timeline-entry.html
+++ b/app/views/case/_communication-timeline-entry.html
@@ -20,7 +20,7 @@
   {% set isTruncated = (truncatedContents !== entry.contents) %}
   <p class="govuk-body {{ 'govuk-!-margin-bottom-0' if not isTruncated }}">{{ truncatedContents | nl2br | safe }}</p>
   {% if isTruncated %}
-    <p class="govuk-body">
+    <p class="govuk-body govuk-!-margin-bottom-0">
       <a href="/cases/{{ CRN }}/other-communication/{{ entry.sessionId }}">View full details</a>
     </p>
   {% endif %}
