--- a/app/views/confirm-attendance/check.html
+++ b/app/views/confirm-attendance/check.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-form.html" %}
-{% set buttonText = 'Confirm attendance' %}
-{% set title = 'Check your answers' %}
+{% set buttonText = 'Confirm and record attendance' %}
+{% set title = 'Check your answers and confirm' %}
 
 {% block form %}
   <h1 class="govuk-heading-xl">{{ title }}</h1>
