--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -58,11 +58,11 @@
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     <h2 class="govuk-heading-m">
-      Risk of harm
+      Risks
     </h2>
 
     <p>
-      Risk to known adults, children, staff, and/or the public (ROSH)
+      Risk of Serious Harm (ROSH)
       <span class="govuk-tag govuk-tag--{{ case.riskOfSeriousHarmLevel.class }} govuk-!-margin-left-2">{{ case.riskOfSeriousHarmLevel.text }}</span>
     </p>
 
