Add phone number to personal contacts

--- a/app/views/case/address-book-personal.html
+++ b/app/views/case/address-book-personal.html
@@ -78,6 +78,10 @@
             {
               key: { text: "Address" },
               value: { html: contact.address.join('<br>') }
+            },
+            {
+              key: { text: "Phone number" },
+              value: { html: contact.phone }
             }
           ]
         }) }}
