--- a/app/views/confirm-attendance/check.html
+++ b/app/views/confirm-attendance/check.html
@@ -5,7 +5,7 @@
 {% block form %}
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
-  {% set showAction = true %}
+  {% set checkingAnswers = true %}
   {% include 'confirm-attendance/_outcome-details.html' %}
 
   <p class="govuk-body">You’re confirming attendance for:</p>
