--- a/app/views/confirm-attendance/confirmation.html
+++ b/app/views/confirm-attendance/confirmation.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-page.html" %}
 {% set buttonText = 'Arrange an appointment' %}
-{% set title = "Attendance confirmed" %}
+{% set title = "Attendance recorded" %}
 
 {% block page %}
 
