--- a/app/views/confirm-attendance/start.html
+++ b/app/views/confirm-attendance/start.html
@@ -1,10 +1,10 @@
 {% extends "_wizard-form.html" %}
-{% set title = 'Confirm attendance' %}
+{% set title = 'Record attendance' %}
 
 {% block form %}
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
-  <p class="govuk-body">You’re confirming attendance for:</p>
+  <p class="govuk-body">You’re recording attendance for:</p>
 
   <div class="govuk-inset-text">
     <strong>{{ appointment['type-of-session'] }}</strong><br>
