Ask if appointments are sensitive
- Ask when arranging appointment and when recording attendance
- Indicate in timeline and on appointment page if something is sensitive
- Tweak "it must not be shared with" to "some details must not be shared", as an appointment by it's nature will be shared, it's just that some aspect, probably something in the notes, is sensitive
- Show if appointment is sensitive in the check answers list

--- a/app/views/arrange-a-session/_session-details.html
+++ b/app/views/arrange-a-session/_session-details.html
@@ -144,6 +144,19 @@
           }
         ]
       } if showAction or notesEditPath
-    } if not hideNotes
+    } if not hideNotes,
+    {
+      key: { text: "Sensitive" },
+      value: { text: data['communication'][CRN][sessionId]['sensitive'] },
+      actions: {
+        items: [
+          {
+            href: path + '/sensitive',
+            text: "Change",
+            visuallyHiddenText: "if this was sensitive"
+          }
+        ]
+      } if showAction
+    }
   ]
   }) }}
