Structured reason for non-compliance

--- a/app/views/confirm-attendance/_outcome-details.html
+++ b/app/views/confirm-attendance/_outcome-details.html
@@ -36,7 +36,7 @@
     },
     {
       key: { text: "Reason for not complying" },
-      value: { text: appointment['non-compliance-reason'] if appointment['non-compliance-reason'] !== 'Other' else appointment['non-compliance-reason-other'] },
+      value: { text: appointment['non-compliance-reason'] },
       actions: {
         items: [
           {
