Only show sensitive badge when sensitive flag set

--- a/app/views/case/_appointment-timeline-entry.html
+++ b/app/views/case/_appointment-timeline-entry.html
@@ -16,7 +16,7 @@
     {{ govukTag({text: 'Absent', classes: 'govuk-tag--red'}) }}
   {% endif %}
 
-  {% if entry.sensitive %}
+  {% if entry.sensitive === 'Yes' %}
     {{ govukTag({ text: "Sensitive", classes: "govuk-tag--grey" }) }}
   {% endif %}
 </h3>
