--- a/app/views/case/_communication-timeline-entry.html
+++ b/app/views/case/_communication-timeline-entry.html
@@ -13,7 +13,7 @@
     Note by {{ replaceDefaultUserWithSignedInUser(entry.lastUpdatedBy, data) }}
     {% endif %}
   </a>
-  {% if entry.sensitive %}
+  {% if entry.sensitive === 'Yes' %}
     {{ govukTag({ text: "Sensitive", classes: "govuk-tag--grey" }) }}
   {% endif %}
 </h3>
