Bring reasons for absence in line with Delius data

--- a/app/views/confirm-attendance/absence-acceptable.html
+++ b/app/views/confirm-attendance/absence-acceptable.html
@@ -16,9 +16,12 @@
          { text: 'Holiday or annual leave' },
          { text: 'Medical' },
          { text: 'Religious' },
-         { text: 'Work or employment' }
+         { text: 'Remanded in custody' },
+         { text: 'Stood down' },
+         { text: 'Work or employment' },
+         { text: 'Other' }
        ]
-       } | decorateFormAttributes(['communication', CRN, sessionId, 'why-absence-acceptable']))
+     } | decorateFormAttributes(['communication', CRN, sessionId, 'why-absence-acceptable']))
     }}
   {% endset %}
 
