Content designed descriptions for reasons for absence

--- a/app/views/confirm-attendance/absence-acceptable.html
+++ b/app/views/confirm-attendance/absence-acceptable.html
@@ -7,7 +7,7 @@
   {% set acceptableAbsenceReasonsRadioItems = [] %}
   {% for reason in reasons %}
     {% set acceptableAbsenceReasonsRadioItems = (acceptableAbsenceReasonsRadioItems.push({
-      text: reason | capitalize
+      text: reason
     }), acceptableAbsenceReasonsRadioItems) %}
   {% endfor %}
 
