Correct styling of time fields

--- a/app/assets/sass/components/_time-autocomplete.scss
+++ b/app/assets/sass/components/_time-autocomplete.scss
@@ -30,3 +30,25 @@
     background-color: govuk-colour("light-grey");
   }
 }
+
+.time-field {
+  position: relative;
+  display: inline-block;
+}
+
+.time-to {
+  margin:0 0.75rem 0 0.75rem;
+}
+
+.ui-timepicker-list li {
+  padding: 8px;
+  border-bottom: 1px solid govuk-colour("mid-grey");
+}
+
+.ui-timepicker-wrapper {
+  @include govuk-font($size: 19);
+  border: 2px solid govuk-colour("black");
+  border-top: none;
+  max-width: 10.8ex;
+  box-sizing: border-box;
+}
