--- a/app/views/arrange-a-session/when.html
+++ b/app/views/arrange-a-session/when.html
@@ -65,7 +65,7 @@
         Time
       </label>
       <input
-        class="govuk-input govuk-input--width-5"
+        class="govuk-input govuk-input--width-5 time-field time-from"
         type="text"
         id="session-start-time"
         name="[communication][{{CRN}}][{{sessionId}}][session-start-time]"
@@ -74,7 +74,7 @@
     <span class="govuk-body" style="margin:0 0.75rem 0 0.75rem;">to</span>
     <div class="autocomplete">
       <input
-        class="govuk-input govuk-input--width-5"
+        class="govuk-input govuk-input--width-5 time-field time-from"
         type="text"
         id="session-end-time"
         name="[communication][{{CRN}}][{{sessionId}}][session-end-time]"
