--- a/app/views/add-other-communication/text/when.html
+++ b/app/views/add-other-communication/text/when.html
@@ -64,7 +64,7 @@
         {{ timeLabel }}
       </label>
       <input
-        class="govuk-input govuk-input--width-5"
+        class="govuk-input govuk-input--width-5 time-field"
         type="text"
         id="other-communication-time"
         name="[communication][{{CRN}}][{{sessionId}}][time]"
